# metaproject

./: pyproject.toml  render.yaml
api/: models.py  serializers.py  views.py
api/migrations/: 0001_initial.py
api/static/api/assets/: itemDownloader.py  itemStats.json  items.json
metaproject/: db.sqlite3  pyproject.toml  requirements.txt
metaproject/api/: urls.py
metaproject/api/static/api/assets/: heroDownload.py  heroStats.json  heroes.json
metaproject/api/util/: explorer.py
metaproject/metaproject/: asgi.py  settings.py  wsgi.py
