[tool.poetry]
name = "metaproject"
version = "0.1.0"
description = ""
authors = ["Luis Vásquez <luisv0909@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"
djangorestframework = "^3.14.0"
requests = "^2.28.1"
numpy = "^1.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
